@@ -291,10 +291,20 @@ java -classpath randoop.jar randoop.main.Main gentests --testclass=java.util.Tre
   </li>
   <li>Creating test oracles
     <ul>
-      <li><b>--check-object-contracts=</b><i>boolean</i>. Use Randoop's default set of object contracts.
-  
- By default, Randoop checks a set of contracts, e.g.
- equals(Object) is reflexive, equals(null) returns false, no NullPointerExceptions, no AssertionErrors, etc. [default true]</li>
+      <li><b>--observers=</b><i>filename</i>. File containing observer functions</li>
+      <li><b>--check-object-contracts=</b><i>boolean</i>. Use Randoop's default set of object contracts as assertions.
+ If disabled, these assertions are not created.
+ <p>
+ 
+ The default set of contracts includes:
+   equals(Object) is reflexive,
+   x.equals(null) returns false,
+   equals(Object) and hashCode() are consistent,
+   equals(Object) is symmetric,
+   any method annotated with @CheckRep returns true. [default true]</li>
+      <li><b>--check-regression-behavior=</b><i>boolean</i>. Capture the current behavior as assertions.
+ This makes Randoop's tests act as regression tests that ensure that the
+ code continues to behave as it did when the tests were generated. [default true]</li>
     </ul>
   </li>
   <li>Outputting the JUnit tests
